--- a/missionctrl-frontend/src/components/molecules/MissionTaskList.css
+++ b/missionctrl-frontend/src/components/molecules/MissionTaskList.css
@@ -1,5 +1,6 @@
 .mission-task-list {
   max-width: 900px;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
